tests/resource/valid/function/exception_and_type.mamba
class MyErr isa Exception

# Function does never return integer
def f(x: Int) -> Int raises [MyErr] => raise MyErr()
