tests/resource/invalid/type/class/generic_unknown_type.mamba
class MyClass[A: UnknownType]
    def f() -> Int => 10

# should error because suddenly we are using an ill-typed class.
def my_class := MyClass[10]()
